--- a/config.json
+++ b/config.json
@@ -1,22 +1,22 @@
 {
-	"resolution_scale_click": 0.5,
+	"resolution_scale_click": 1.0,
 	"max_window_x": 1316,
 	"max_window_y": 822,
 	"stack_width": 134,
 	"stack_height": 30,
-	"base_stack_offset_x": 55,
-	"base_stack_offset_y": 332,
-	"freecell_offset_x": 1046,
-	"freecell_offset_y": 89,
+	"base_stack_offset_x": 56,
+	"base_stack_offset_y": 331,
+	"freecell_offset_x": 1066,
+	"freecell_offset_y": 99,
 	"card_sprite_x": 22,
 	"card_sprite_y": 23,
 	"number_stacks": 9,
 	"cards_per_stack_base": 4,
-	"anchor_filename": "card_back/anchor/anchor.png",
-	"card_filename": "card_back/cards/*.png",
+	"anchor_filename": "card_back/anchor1080x1/anchor.png",
+	"card_filename": "card_back/1080x1/*.png",
 	"click_offset_x": 40,
 	"click_offset_y": 21,
-	"base_delay": 0.2,
+	"base_delay": 0.8,
 	"window_click_offset_x": 100,
 	"window_click_offset_y": 100,
 	"new_game_offset_x": 1064,
